--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This is the online quiz project.
 the project is not yet completed.
 I just did  Writing the questions to file and read it from the file to display on terminal.
-I haven't yet do the job of storing and displaying the scores .
+The scores are stored in a file and display on terminal.
 
